--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ vignettes/*.pdf
 
 # knitr and R markdown default cache directories
 *_cache/
-/cache/
+/cache/*.rds
 
 # Temporary files created by R markdown
 *.utf8.md
